# ydis

./: .gitignore  LICENSE  main.py  pyproject.toml
examples/: demo_simple.py
ydis/: cli.py
ydis/core/: disassembler.py
ydis/render/: rich_output.py
